--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,58 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
     font-family: Roboto, sans-serif;
     color: #434455 ;
     background-color: #fff;
+} 
+
+/* reset */
+
+ul, ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
 a {
     text-decoration: none;
 }
-ul, ol {
-    list-style-type: none;
+
+/* common */
+
+.section {
+    padding: 120px 0;
+    max-width: 100%;
+}
+
+.container {
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+/* header */
+
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.header-inner {
+    display: flex;
+    align-items: center;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
 }
 
 .logo {
@@ -20,6 +65,11 @@ ul, ol {
     color: #4d5ae5;
 }
 
+.header-logo {
+    padding: 24px 0;
+    margin-right: 76px;
+} 
+
 .header-logo .logo-part {
     color: #2e2f42;
 }
@@ -28,7 +78,15 @@ ul, ol {
     color: #f4f4fd;
 }
 
+.header-menu {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+}
+
 .header-menu-link {
+    display: block;
+    padding: 24px 0;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -38,9 +96,18 @@ ul, ol {
 
 .header-contacts {
     font-style: normal;
+    margin-left: auto;
+}
+
+.header-contacts-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
 }
 
 .header-contacts-link {
+    display: block;
+    padding: 24px 0;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -54,11 +121,17 @@ ul, ol {
     color: #404bbf;
 } 
 
+/* main */
+
 .main-section {
+    padding: 188px 0;
     background-color: #2E2F42;
 }
 
 .main-title {
+    margin: 0 auto;
+    margin-bottom: 48px;
+    width: 496px;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
@@ -67,6 +140,11 @@ ul, ol {
 }
 
 .main-button {
+    display: block;
+    margin: 0 auto;
+    padding: 16px 32px;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: #4d5ae5;
     cursor: pointer;
     font-family: inherit;
@@ -82,12 +160,38 @@ ul, ol {
     background-color: #404bbf;
 }
 
+/* benefits */
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.benefits-inner {
+    max-width: 1128px;
+}
+
 .benefits-item-title {
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    
+}
+
+.benefits-list {
+    display: flex;
+    gap: 24px;
 }
 
 .benefits-item-text {
@@ -97,15 +201,18 @@ ul, ol {
     color: #434455;
 }
 
-.team {
+.benefits-item {
+    width: calc((100% - 72px) / 4);
+}
+
+/* team */
+
+.team-section {
     background-color: #f4f4fd;
 }
 
-.team-member {
-    background-color: #fff;
-}
-
 .team-title {
+    margin-bottom: 72px;
     text-transform: capitalize;
     font-size: 36px;
     line-height: 1.11;
@@ -114,7 +221,31 @@ ul, ol {
     color: #2e2f42;
 }
 
+.team-list {
+    display: flex;
+    gap: 24px;  
+}
+
+.team-member {
+    display: block;
+    border-radius: 0 0 4px 4px;
+    background-color: #fff;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.team-photo {
+    display: block;
+    max-width: 100%; 
+    height: auto;
+}
+
+.team-text {
+    display: block;
+    padding: 32px 0;
+}
+
 .team-name {
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -131,7 +262,14 @@ ul, ol {
     color: #434455;
 }
 
+/* portfolio */ 
+
+.portfolio {
+    width: 1128px;
+}
+
 .portfolio-title {
+    margin-bottom: 72px;
     text-transform: capitalize;
     font-size: 36px;
     line-height: 1.11;
@@ -140,11 +278,34 @@ ul, ol {
     color: #2e2f42;
 }
 
-.portfolio-item {
-    background-color: #fff;
+.portfolio-list {
+    display: flex;
+    gap: 48px 24px;
+    flex-wrap: wrap;
 }
 
+.portfolio-item {
+    background-color: #fff;
+    width: calc((100% - 48px) / 3);
+}
+
+.portfolio-img {
+    display: block;
+    max-width: 100%; 
+    height: auto;
+}
+
+.portfolio-border {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 0;
+}
+
+
 .portfolio-item-title {
+    margin-bottom: 8px;
+    padding-left: 16px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -153,14 +314,23 @@ ul, ol {
 }
 
 .portfolio-item-text {
+    padding-left: 16px;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
 
+/* footer */ 
+
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
+}
+
+.footer-logo {
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer-description {
@@ -168,6 +338,7 @@ ul, ol {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    width: 264px;
 }
 
 
